--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -13,9 +13,25 @@
     <div class="juegoto">
 <div class="escenario"><img src="./img/Escenario.jpg" alt=""></div>
 
-<div class="moneda"><img src="./img/Moneda.png" alt=""></div>
-<div class="moneda1"><img src="./img/Moneda.png" alt=""></div>
-<div class="moneda2"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda saltar"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda1"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda2"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda3"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda4"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda5"><img src="./img/Moneda.png" alt=""></div>
+
+
+
+<div class="corazon"> <img src="./img/Corazon.png" alt=""></div>
+<div class="corazon1"> <img src="./img/Corazon.png" alt=""></div>
+<div class="corazon2"> <img src="./img/Corazon.png" alt=""></div>
+
+<div class="personaje"> <img src="./img/personaje.png" alt=""></div>
+
+
+<div class="nube"><img src="./img/nubia-Photoroom.png" alt=""></div>
+<div class="nube1"><img src="./img/nubia-Photoroom.png" alt=""></div>
+<div class="nube2"><img src="./img/nubia-Photoroom.png" alt=""></div>
 
     </div>
 
