--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -13,7 +13,7 @@
     <div class="juegoto">
 <div class="escenario"><img src="./img/Escenario.jpg" alt=""></div>
 
-<div class="viktor moneda saltar"><img src="./img/Moneda.png" alt=""></div>
+<div class="viktor moneda"><img src="./img/Moneda.png" alt=""></div>
 <div class="viktor moneda1"><img src="./img/Moneda.png" alt=""></div>
 <div class="viktor moneda2"><img src="./img/Moneda.png" alt=""></div>
 <div class="viktor moneda3"><img src="./img/Moneda.png" alt=""></div>
@@ -22,9 +22,9 @@
 
 
 
-<div class="corazon"> <img src="./img/Corazon.png" alt=""></div>
-<div class="corazon1"> <img src="./img/Corazon.png" alt=""></div>
-<div class="corazon2"> <img src="./img/Corazon.png" alt=""></div>
+<div class="oli corazon"> <img src="./img/Corazon.png" alt=""></div>
+<div class="oli corazon1"> <img src="./img/Corazon.png" alt=""></div>
+<div class="oli corazon2"> <img src="./img/Corazon.png" alt=""></div>
 
 <div class="personaje"> <img src="./img/personaje.png" alt=""></div>
 
@@ -33,7 +33,12 @@
 <div class="nube1"><img src="./img/nubia-Photoroom.png" alt=""></div>
 <div class="nube2"><img src="./img/nubia-Photoroom.png" alt=""></div>
 
-    </div>
+
+<div class="contador">ESCORE: 
+    <div>0</div>
+</div>
+
+</div>
 
     <script src="./app.js"></script>
 </body>
