--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -20,14 +20,11 @@
 <div class="viktor moneda4"><img src="./img/Moneda.png" alt=""></div>
 <div class="viktor moneda5"><img src="./img/Moneda.png" alt=""></div>
 
-
-
-<div class="oli corazon"> <img src="./img/Corazon.png" alt=""></div>
-<div class="oli corazon1"> <img src="./img/Corazon.png" alt=""></div>
-<div class="oli corazon2"> <img src="./img/Corazon.png" alt=""></div>
+<div class="coco corazon"> <img src="./img/Corazon.png" alt=""></div>
+<div class="coco corazon1"> <img src="./img/Corazon.png" alt=""></div>
+<div class="coco corazon2"> <img src="./img/Corazon.png" alt=""></div>
 
 <div class="personaje"> <img src="./img/personaje.png" alt=""></div>
-
 
 <div class="nube"><img src="./img/nubia-Photoroom.png" alt=""></div>
 <div class="nube1"><img src="./img/nubia-Photoroom.png" alt=""></div>
@@ -37,6 +34,36 @@
 <div class="contador">ESCORE: 
     <div>0</div>
 </div>
+
+</div>
+
+
+
+<div class="juegoKirby">
+
+<div class="escenario2"> <img src="./img/escenarioKirby.png" alt=""></div>
+
+<div class="manzana"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana1"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana2"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana3"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana4"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana5"><img src="./img/manzana.png" alt=""></div>
+<div class="manzana6"><img src="./img/manzana.png" alt=""></div>
+
+<div class="personaje2"> <img src="./img/kirby.png" alt=""></div>
+
+<div class="contador2">ESCORE: 
+    <div>0</div>
+</div>
+
+<div class="burbuja"><img src="./img/burbujas.png" alt=""></div>
+<div class="burbuja1"><img src="./img/burbujas.png" alt=""></div>
+
+<div class="burbujaSola"><img src="./img/burbujaSola.png" alt=""></div>
+<div class="burbujaSola1"><img src="./img/burbujaSola.png" alt=""></div>
+
+
 
 </div>
 
