--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -43,13 +43,13 @@
 
 <div class="escenario2"> <img src="./img/escenarioKirby.png" alt=""></div>
 
-<div class="manzana"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana1"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana2"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana3"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana4"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana5"><img src="./img/manzana.png" alt=""></div>
-<div class="manzana6"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana1"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana2"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana3"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana4"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana5"><img src="./img/manzana.png" alt=""></div>
+<div class="mamoi manzana6"><img src="./img/manzana.png" alt=""></div>
 
 <div class="personaje2"> <img src="./img/kirby.png" alt=""></div>
 
@@ -63,7 +63,23 @@
 <div class="burbujaSola"><img src="./img/burbujaSola.png" alt=""></div>
 <div class="burbujaSola1"><img src="./img/burbujaSola.png" alt=""></div>
 
+</div>
 
+
+<div class="juegoSonic">
+
+<div class="escenario3"><img src="./img/escenarioSonic.jpg" alt=""></div>
+
+<div class="diamante"><img src="./img/diamanteMorado.png" alt=""></div>
+<div class="diamante1"><img src="./img/diamanteRojo.png" alt=""></div>
+<div class="diamante2"><img src="./img/diamanteAzul.png" alt=""></div>
+<div class="diamante3"><img src="./img/diamanteVerde.png" alt=""></div>
+
+<div class="personaje3"><img src="./img/sonic.png" alt=""></div>
+
+<div class="contador3">ESCORE: 
+    <div>0</div>
+</div>
 
 </div>
 
