--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -70,12 +70,16 @@
 
 <div class="escenario3"><img src="./img/escenarioSonic.jpg" alt=""></div>
 
-<div class="diamante"><img src="./img/diamanteMorado.png" alt=""></div>
-<div class="diamante1"><img src="./img/diamanteRojo.png" alt=""></div>
-<div class="diamante2"><img src="./img/diamanteAzul.png" alt=""></div>
-<div class="diamante3"><img src="./img/diamanteVerde.png" alt=""></div>
+<div class="julio diamante"><img src="./img/diamanteMorado.png" alt=""></div>
+<div class="julio diamante1"><img src="./img/diamanteRojo.png" alt=""></div>
+<div class="julio diamante2"><img src="./img/diamanteAzul.png" alt=""></div>
+<div class="julio diamante3"><img src="./img/diamanteVerde.png" alt=""></div>
 
 <div class="personaje3"><img src="./img/sonic.png" alt=""></div>
+
+<div class="nuve"><img src="./img/colas.png" alt=""></div>
+<div class="nuve1"><img src="./img/nubia-Photoroom.png" alt=""></div>
+<div class="nuve2"><img src="./img/nubia-Photoroom.png" alt=""></div>
 
 <div class="contador3">ESCORE: 
     <div>0</div>
