--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -10,7 +10,9 @@
 <body>
 
 
-    <div class="juegoto">
+    <div class="activa juegoto">
+  
+
 <div class="escenario"><img src="./img/Escenario.jpg" alt=""></div>
 
 <div class="viktor moneda"><img src="./img/Moneda.png" alt=""></div>
@@ -35,11 +37,20 @@
     <div>0</div>
 </div>
 
+<button class="anterior"> < </button>
+<button class="siguiente"> > </button>
+
+<div class="miniatura"><img src="./img/lol.png" alt=""></div>
+<div class="miniatura1"><img src="./img/lol1.png" alt=""></div>
+<div class="miniatura2"><img src="./img/lol2.png" alt=""></div>
+
+
 </div>
 
 
 
-<div class="juegoKirby">
+<div class="escena juegoKirby">
+
 
 <div class="escenario2"> <img src="./img/escenarioKirby.png" alt=""></div>
 
@@ -66,7 +77,8 @@
 </div>
 
 
-<div class="juegoSonic">
+<div class="escena juegoSonic">
+
 
 <div class="escenario3"><img src="./img/escenarioSonic.jpg" alt=""></div>
 
