escenarios (botones hechos)

--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -11,8 +11,18 @@
 
 <body>
 
+ <div class="eso">
+        <button class="anterior">
+            < </button>
+</div>
 
-    <div class="juegoOso">
+<div class="esa">
+         <button class="siguiente"> > 
+         </button>
+    </div>
+
+
+    <div class="juegoOso escena">
 
 
         <div class="escenario joa"><img src="./img/Escenario.jpg" alt=""></div>
@@ -39,20 +49,12 @@
             <div>0</div>
         </div>
 
-        <button class="anterior">
-            < </button>
-                <button class="siguiente"> > </button>
-
-                <div class="miniatura poio"><img src="./img/lol.png" alt=""></div>
-                <div class="miniatura1 poio"><img src="./img/lol1.png" alt=""></div>
-                <div class="miniatura2 poio"><img src="./img/lol2 - copia.png" alt=""></div>
-
 
     </div>
 
 
 
-    <div class="juegoKirby">
+    <div class="juegoKirby escena">
 
 
         <div class="escenario2 joa"> <img src="./img/escenarioKirby.png" alt=""></div>
@@ -77,10 +79,13 @@
         <div class="burbujaSola"><img src="./img/burbujaSola.png" alt=""></div>
         <div class="burbujaSola1"><img src="./img/burbujaSola.png" alt=""></div>
 
+
+       
+
     </div>
 
 
-    <div class="juegoSonic">
+    <div class="juegoSonic escena">
 
 
         <div class="escenario3 joa"><img src="./img/escenarioSonic.jpg" alt=""></div>
@@ -100,9 +105,24 @@
             <div>0</div>
         </div>
 
+
     </div>
 
+   
+    <div class="minis">
+        <div class="miniatura poio"><img src="./img/lol.png" alt=""></div>
+        <div class="miniatura1 poio"><img src="./img/lol1.png" alt=""></div>
+        <div class="miniatura2 poio"><img src="./img/lol2 - copia.png" alt=""></div>
+    </div>
+
+
+
+
     <script src="./app.js"></script>
+
+
+
+
 </body>
 
 </html>
