Escenarios con Sonidos

--- a/Poster-Interactivo/index.html
+++ b/Poster-Interactivo/index.html
@@ -34,11 +34,15 @@
         <div class="viktor moneda4"><img src="./img/Moneda.png" alt=""></div>
         <div class="viktor moneda5"><img src="./img/Moneda.png" alt=""></div>
 
+        <div class="sonidoMoneda"><audio src="./Audios/Moneda.mp3"></audio></div>
+
+
         <div class="coco corazon"> <img src="./img/Corazon.png" alt=""></div>
         <div class="coco corazon1"> <img src="./img/Corazon.png" alt=""></div>
         <div class="coco corazon2"> <img src="./img/Corazon.png" alt=""></div>
 
         <div class="personaje"> <img src="./img/personaje.png" alt=""></div>
+        <div class="sonidoPersonajeOso"><audio src="./Audios/oso.mp3"></audio></div>
 
         <div class="nube"><img src="./img/nubia-Photoroom.png" alt=""></div>
         <div class="nube1"><img src="./img/nubia-Photoroom.png" alt=""></div>
@@ -67,7 +71,10 @@
         <div class="mamoi manzana5"><img src="./img/manzana.png" alt=""></div>
         <div class="mamoi manzana6"><img src="./img/manzana.png" alt=""></div>
 
+        <div class="sonidoManzana"><audio src="./Audios/Manzanas.mp3"></audio></div>
+
         <div class="personaje2"> <img src="./img/kirby.png" alt=""></div>
+        <div class="sonidoPersonaje"><audio src="./Audios/kirby.mp3"></audio></div>
 
         <div class="contador2">ESCORE:
             <div>0</div>
@@ -95,7 +102,10 @@
         <div class="julio diamante2"><img src="./img/diamanteAzul.png" alt=""></div>
         <div class="julio diamante3"><img src="./img/diamanteVerde.png" alt=""></div>
 
+        <div class="sonidoDiamante"><audio src="./Audios/Diamantes.mp3"></audio></div>
+
         <div class="personaje3"><img src="./img/sonic.png" alt=""></div>
+        <div class="sonidoPersonaje3"><audio src="./Audios/sonic.mp3"></audio></div>
 
         <div class="nuve"><img src="./img/colas.png" alt=""></div>
         <div class="nuve1"><img src="./img/nubia-Photoroom.png" alt=""></div>
