Maquetado de la pagina

--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -8,6 +8,51 @@
 </head>
 <body>
     
+<div> <h1>(Cabeza) 
+    CENIZAS DE HONOR</h1></div>
+<div>La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.</div>
+<button>Ver Comic</button>
+
+<h1></h1>
+
+<div>Genero: Fantasia, Aventura, Drama y Accion</div>
+<div>Año: 2025</div>
+<div>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</div>
+
+<h3>Leve Narrativa</h3>
+<div>Descripcion de esa Narrativa</div>
+
+<h1></h1>
+
+<h3>Siguientes Episodios:</h3>
+<div>Epi 1: Titulo del Capitulo</div>
+<div>Epi 2: Titulo del Capitulo</div>
+<div>Epi 3: Titulo del Capitulo</div>
+<div>Epi 4: Titulo del Capitulo</div>
+<div>Epi 5: Titulo del Capitulo</div>
+
+<h1></h1>
+
+<h3>Personajes:</h3>
+<div>Sir Leon</div>
+<div>Elvira</div>
+<div>Ninove</div>
+<div>Brujas del Alba</div>
+<div>Rey</div>
+<div>Reina</div>
+<div>Consejero</div>
+<div>Crisrobal Colon</div>
+
+<h1></h1>
+
+<h3>(Cuerpo) Menu</h3>
+<div>Tienda</div>
+<div>Contacto</div>
+<div>Marca</div>
+<div>Galeria</div>
+
+<h3>Nuestro Comic</h3>
+<div>Descripcion de que nos enseña el comic y los diferentes eventos que pasaron en la edad media.</div>
 
 <script src="./app.js"></script>
 <script src="./bd.js"></script>
