--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 
+<link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     
-<div> <h1>(Cabeza) 
-    CENIZAS DE HONOR</h1></div>
-<div>La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.</div>
+<div class="portada">
+    <div class="letra"> 
+        <h1> CENIZAS DE HONOR</h1>
+La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.
 <button>Ver Comic</button>
+    </div>
+</div>
 
-<h1></h1>
+
+
 
 <div>Genero: Fantasia, Aventura, Drama y Accion</div>
 <div>Año: 2025</div>
@@ -22,7 +28,7 @@
 <h3>Leve Narrativa</h3>
 <div>Descripcion de esa Narrativa</div>
 
-<h1></h1>
+
 
 <h3>Siguientes Episodios:</h3>
 <div>Epi 1: Titulo del Capitulo</div>
@@ -31,7 +37,7 @@
 <div>Epi 4: Titulo del Capitulo</div>
 <div>Epi 5: Titulo del Capitulo</div>
 
-<h1></h1>
+
 
 <h3>Personajes:</h3>
 <div>Sir Leon</div>
@@ -43,7 +49,7 @@
 <div>Consejero</div>
 <div>Crisrobal Colon</div>
 
-<h1></h1>
+
 
 <h3>(Cuerpo) Menu</h3>
 <div>Tienda</div>
