--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -12,18 +12,25 @@
     
 <div class="portada">
     <div class="letra"> 
+
         <h1> CENIZAS DE HONOR</h1>
-La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.
+<div>La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.</div>
 <button>Ver Comic</button>
+
+
     </div>
 </div>
 
 
+<div class="info">
+   <div class="letras">
+    <p>Genero: Fantasia, Aventura, Drama y Accion</p>
+<p>Año: 2025</p>
+<p>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</p>
+   </div>
 
+</div>
 
-<div>Genero: Fantasia, Aventura, Drama y Accion</div>
-<div>Año: 2025</div>
-<div>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</div>
 
 <h3>Leve Narrativa</h3>
 <div>Descripcion de esa Narrativa</div>
@@ -49,16 +56,6 @@ La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de
 <div>Consejero</div>
 <div>Crisrobal Colon</div>
 
-
-
-<h3>(Cuerpo) Menu</h3>
-<div>Tienda</div>
-<div>Contacto</div>
-<div>Marca</div>
-<div>Galeria</div>
-
-<h3>Nuestro Comic</h3>
-<div>Descripcion de que nos enseña el comic y los diferentes eventos que pasaron en la edad media.</div>
 
 <script src="./app.js"></script>
 <script src="./bd.js"></script>
