CSS Responsive (Empezando)

--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -11,10 +11,15 @@
 <body>
     
 <div class="portada">
+    
     <div class="letra"> 
-
         <h1> CENIZAS DE HONOR</h1>
-<div>La aventura de un heroe, que por sus malas desiciones enfrentara las acciones de sus actos.</div>
+<div>En los últimos días del gran Imperio Romano, cuando los bárbaros atacaban las murallas y
+el mundo antiguo se derrumbaba, vivía un joven caballero llamado Sir León.
+Era famoso por su espada gigante, llamada Rompealbas, que podía levantar con una sola
+mano. Su familia era una de las más respetadas de la ciudad: todos lo admiraban por su
+valentía
+...hasta que un día, su honor se vino abajo y ahora enfrentara las consecuencias de sus actos. </div>
 <button>Ver Comic</button>
 
 
@@ -28,34 +33,29 @@
 <p>Año: 2025</p>
 <p>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</p>
    </div>
-
 </div>
 
 
-<h3>Leve Narrativa</h3>
-<div>Descripcion de esa Narrativa</div>
+<div class="Episodios">
+<h3>SIGUIENTES EPISODIOS:</h3>
+</div>
 
+<div class="esos">
 
+<div> <p>
+ Epi 1: Titulo del Capitulo</p></div>
+<div> <p>
+ Epi 2: Titulo del Capitulo</p></div>
+<div> <p>
+ Epi 3: Titulo del Capitulo</p></div>
+<div> <p>
+ Epi 4: Titulo del Capitulo</p></div>
+<div> <p>
+ Epi 5: Titulo del Capitulo</p></div>
 
-<h3>Siguientes Episodios:</h3>
-<div>Epi 1: Titulo del Capitulo</div>
-<div>Epi 2: Titulo del Capitulo</div>
-<div>Epi 3: Titulo del Capitulo</div>
-<div>Epi 4: Titulo del Capitulo</div>
-<div>Epi 5: Titulo del Capitulo</div>
+</div>
 
-
-
-<h3>Personajes:</h3>
-<div>Sir Leon</div>
-<div>Elvira</div>
-<div>Ninove</div>
-<div>Brujas del Alba</div>
-<div>Rey</div>
-<div>Reina</div>
-<div>Consejero</div>
-<div>Crisrobal Colon</div>
-
+<h1></h1>
 
 <script src="./app.js"></script>
 <script src="./bd.js"></script>
