--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -35,27 +35,58 @@ valentía
    </div>
 </div>
 
+<div class="perso">
+<h3>PERSONAJES</h3>
+</div>
+
+<div class="personajes">
+
+<div> <img src="./img/caballero.png" alt="">
+    <p>Sir Leon</p></div>
+
+<div> <img src="./img/elvira.png" alt="">
+    <p>Elvira</p></div>
+
+<div> <img src="./img/ninove.png" alt="">
+    <p>Ninove</p></div>
+
+<div> <img src="./img/brujas.png" alt="">
+    <p>Brujas</p></div>
+
+<div> <img src="./img/rey.png" alt="">
+    <p>Rey</p></div>
+
+<div> <img src="./img/reina.png" alt="">
+    <p>Reina</p></div>
+
+ <div> <img src="./img/sirvienta.png" alt="">
+    <p>Sirvienta</p></div>
+
+ <div> <img src="./img/consejero.png" alt="">
+    <p>Cristobal C</p></div>
+</div>
+
+
 
 <div class="Episodios">
-<h3>SIGUIENTES EPISODIOS:</h3>
+<h3>SIGUIENTES EPISODIOS</h3>
 </div>
 
 <div class="esos">
 
-<div> <p>
+<div> <img src="./img/era 1.png" alt=""><p>
  Epi 1: Titulo del Capitulo</p></div>
-<div> <p>
+<div> <img src="./img/era 3.png" alt=""><p>
  Epi 2: Titulo del Capitulo</p></div>
-<div> <p>
+<div> <img src="./img/era 2.png" alt=""><p>
  Epi 3: Titulo del Capitulo</p></div>
-<div> <p>
+<div> <img src="./img/era 5.png" alt=""><p>
  Epi 4: Titulo del Capitulo</p></div>
-<div> <p>
+<div> <img src="./img/era 4.png" alt=""><p>
  Epi 5: Titulo del Capitulo</p></div>
-
 </div>
 
-<h1></h1>
+<div></div>
 
 <script src="./app.js"></script>
 <script src="./bd.js"></script>
