--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 
 <link rel="stylesheet" href="./style.css">
@@ -14,12 +15,7 @@
     
     <div class="letra"> 
         <h1> CENIZAS DE HONOR</h1>
-<div>En los últimos días del gran Imperio Romano, cuando los bárbaros atacaban las murallas y
-el mundo antiguo se derrumbaba, vivía un joven caballero llamado Sir León.
-Era famoso por su espada gigante, llamada Rompealbas, que podía levantar con una sola
-mano. Su familia era una de las más respetadas de la ciudad: todos lo admiraban por su
-valentía
-...hasta que un día, su honor se vino abajo y ahora enfrentara las consecuencias de sus actos. </div>
+<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum ullam vitae minus in aperiam, perferendis dolorem cum, ipsa deserunt accusamus sunt, beatae neque cumque laborum quisquam iste incidunt doloribus! </div>
 <button>Ver Comic</button>
 
 
@@ -88,8 +84,9 @@ valentía
 
 <div></div>
 
-<script src="./app.js"></script>
+
 <script src="./bd.js"></script>
+<script src="./index.js"></script>
 
 </body>
 </html>
