Escenas Estructura Base de Datos

--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -44,7 +44,7 @@
     <p>Elvira</p></div>
 
 <div> <img src="./img/ninove.png" alt="">
-    <p>Ninove</p></div>
+    <p>Ninov</p></div>
 
 <div> <img src="./img/brujas.png" alt="">
     <p>Brujas</p></div>
@@ -69,6 +69,8 @@
 </div>
 
 <div class="esos">
+
+<div class="tarjeta-cap"></div>
 
 <div> <img src="./img/era 1.png" alt=""><p>
  Epi 1: Titulo del Capitulo</p></div>
