Base de Datos Realizada

--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -1,94 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Document</title>
 
-<link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-    
-<div class="portada">
-    
-    <div class="letra"> 
-        <h1> CENIZAS DE HONOR</h1>
-<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum ullam vitae minus in aperiam, perferendis dolorem cum, ipsa deserunt accusamus sunt, beatae neque cumque laborum quisquam iste incidunt doloribus! </div>
-<button>Ver Comic</button>
+
+    <div class="portada">
+
+        <div class="letra">
+            <h1> CENIZAS DE HONO</h1>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum ullam vitae minus in aperiam,
+                perferendis dolorem cum, ipsa deserunt accusamus sunt, beatae neque cumque laborum quisquam iste
+                incidunt doloribus! </div>
+            <button>Ver Comic</button>
 
 
+        </div>
     </div>
-</div>
 
 
-<div class="info">
-   <div class="letras">
-    <p>Genero: Fantasia, Aventura, Drama y Accion</p>
-<p>Año: 2025</p>
-<p>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</p>
-   </div>
-</div>
+    <div class="info">
+        <div class="letras">
+            <p>Genero: Fantasia, Aventura, Drama y Accion</p>
+            <p>Año: 2025</p>
+            <p>Autores: Isabel Sofia, Luna Rivera, Miguel Noreña, y Alexis Chica</p>
+        </div>
+    </div>
 
-<div class="perso">
-<h3>PERSONAJES</h3>
-</div>
+    <div class="perso">
+        <h3>PERSONAJES</h3>
+    </div>
 
-<div class="personajes">
+    <div class="personajes">
 
-<div> <img src="./img/caballero.png" alt="">
-    <p>Sir Leon</p></div>
+        <!-- <div> <img src="./img/caballero.png" alt="">
+            <p>Sir Leon</p>
+        </div>
 
-<div> <img src="./img/elvira.png" alt="">
-    <p>Elvira</p></div>
+        <div> <img src="./img/elvira.png" alt="">
+            <p>Elvira</p>
+        </div>
 
-<div> <img src="./img/ninove.png" alt="">
-    <p>Ninov</p></div>
+        <div> <img src="./img/ninove.png" alt="">
+            <p>Ninove</p>
+        </div>
 
-<div> <img src="./img/brujas.png" alt="">
-    <p>Brujas</p></div>
+        <div> <img src="./img/brujas.png" alt="">
+            <p>Brujas</p>
+        </div>
 
-<div> <img src="./img/rey.png" alt="">
-    <p>Rey</p></div>
+        <div> <img src="./img/rey.png" alt="">
+            <p>Rey</p>
+        </div>
 
-<div> <img src="./img/reina.png" alt="">
-    <p>Reina</p></div>
+        <div> <img src="./img/reina.png" alt="">
+            <p>Reina</p>
+        </div>
 
- <div> <img src="./img/sirvienta.png" alt="">
-    <p>Sirvienta</p></div>
+        <div> <img src="./img/sirvienta.png" alt="">
+            <p>Sirvienta</p>
+        </div>
 
- <div> <img src="./img/consejero.png" alt="">
-    <p>Cristobal C</p></div>
-</div>
-
-
-
-<div class="Episodios">
-<h3>SIGUIENTES EPISODIOS</h3>
-</div>
-
-<div class="esos">
-
-<div class="tarjeta-cap"></div>
-
-<div> <img src="./img/era 1.png" alt=""><p>
- Epi 1: Titulo del Capitulo</p></div>
-<div> <img src="./img/era 3.png" alt=""><p>
- Epi 2: Titulo del Capitulo</p></div>
-<div> <img src="./img/era 2.png" alt=""><p>
- Epi 3: Titulo del Capitulo</p></div>
-<div> <img src="./img/era 5.png" alt=""><p>
- Epi 4: Titulo del Capitulo</p></div>
-<div> <img src="./img/era 4.png" alt=""><p>
- Epi 5: Titulo del Capitulo</p></div>
-</div>
-
-<div></div>
+        <div> <img src="./img/consejero.png" alt="">
+            <p>Cristobal C</p>
+        </div> -->
+    </div>
 
 
-<script src="./bd.js"></script>
-<script src="./index.js"></script>
+
+    <div class="Episodios">
+        <h3>SIGUIENTES EPISODIOS</h3>
+    </div>
+
+    <div class="esos">
+
+        <!-- <div> <img src="./img/era 1.png" alt="">
+            <p>
+                Epi 1: Titulo del Capitulo</p>
+        </div>
+        <div> <img src="./img/era 3.png" alt="">
+            <p>
+                Epi 2: Titulo del Capitulo</p>
+        </div>
+        <div> <img src="./img/era 2.png" alt="">
+            <p>
+                Epi 3: Titulo del Capitulo</p>
+        </div>
+        <div> <img src="./img/era 5.png" alt="">
+            <p>
+                Epi 4: Titulo del Capitulo</p>
+        </div>
+        <div> <img src="./img/era 4.png" alt="">
+            <p>
+                Epi 5: Titulo del Capitulo</p>
+        </div> -->
+    </div>
+
+    <div></div>
+
+    <h1></h1>
+
+    <script src="./bd.js"></script>
+    <script src="./index.js"></script>
 
 </body>
+
 </html>
