Conexion de paginas

--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -14,6 +14,12 @@
 <body>
 
     <div class="portada">
+        <div class="equisde">
+            <h3>RUNAS CODEX</h3>
+        <p>Tienda</p>
+        <p>Marca</p>
+        <p>Contacto</p>
+    </div>
 
         <div class="letra">
             <h1> CENIZAS DE HONO</h1>
