--- a/3-escenario-personaje/personaje.html
+++ b/3-escenario-personaje/personaje.html
@@ -9,17 +9,21 @@
 </head>
 <body>
     
+<div class="todo">
+
 <div class="personaje">
     <img src="./img/Gemini_Generated_Image_kcgaickcgaickcga.png" alt="">
 </div>
-
 
 <div class="informacion">
     <h1>SIR LEON</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi deserunt voluptas temporibus id, enim molestias aspernatur ullam hic voluptatem animi esse quae cupiditate tenetur? Ipsum accusantium at quas voluptas culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 </div>
 
+</div>
 <h1></h1>
 
+<!--  <script src="./bd.js"></script> -->
+<script type="module" src="./personaje.js"></script>
 </body>
 </html>
