--- a/2-base-datos-comic/index.html
+++ b/2-base-datos-comic/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<div class="todo">
 
     <div class="portada">
         <div class="equisde">
@@ -114,8 +115,10 @@
 
     <h1></h1>
 
-    <script src="./bd.js"></script>
-    <script src="./index.js"></script>
+   <!--  <script src="./bd.js"></script> -->
+    <script type="module" src="./index.js"></script>
+
+    </div>
 
 </body>
 
