vinculo con episodios

--- a/3-escenario-personaje/personaje.html
+++ b/3-escenario-personaje/personaje.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<div class="todo">
+<div class="contenedor">
 
 <div class="personaje">
     <img src="./img/Gemini_Generated_Image_kcgaickcgaickcga.png" alt="">
