--- a/3-escenario-personaje/personaje.html
+++ b/3-escenario-personaje/personaje.html
@@ -11,9 +11,13 @@
     
 <div class="contenedor">
 
+  <a href="../2-base-datos-comic/index.html" class="boton">Atras</a>
+
+
 <div class="personaje">
     <img src="./img/Gemini_Generated_Image_kcgaickcgaickcga.png" alt="">
 </div>
+
 
 <div class="informacion">
     <h1>SIR LEON</h1>
