--- a/3-escenario-video/capitulo.html
+++ b/3-escenario-video/capitulo.html
@@ -10,6 +10,8 @@
     
 <div class="contenedor">
 
+ <a href="../2-base-datos-comic/index.html" class="boton">Atras</a>
+
 <div class="pantalla">
     <video width="800" height="500" controls>
   <source src="./video/movie.mp4" type="video/mp4">
@@ -27,5 +29,7 @@
 
 <!--  <script src="./bd.js"></script> -->
 <script type="module" src="./video.js"></script>
+
+
 </body>
 </html>
