--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 <div class="imagen"><img src="./2-base-datos-comic/img/mano.png" alt=""></div>
 
-<a href="http://127.0.0.1:5500/2-base-datos-comic/index.html" class="boton">---</a>
+<a href="./2-base-datos-comic/index.html" class="boton">---</a>
 </body>
 </html> 
