--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     
 
-<div class="keke"><h1>¡EMPIEZA LA AVENTURA!</h1></div>
+<div class="keke"><h1>¡EMPIEZA LA AVENTURA!</h1>
 
-<div class="imagen"><img src="./2-base-datos-comic/img/mano.png" alt=""></div>
+<a href="./2-base-datos-comic/index.html" class="boton">Iniciar</a>
 
-<a href="./2-base-datos-comic/index.html" class="boton">---</a>
+</div>
+
+
 </body>
 </html> 
